TreeAnalysis/Plot/Plot_before271014/CR3P1F_sigINstate+bkg_data.txt
Info in <TCanvas::Print>: file Stack_CR3P1F_data_sigINstate+bkg.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_CR3P1F_data_sigINstate+bkg.root has been created
Info in <TCanvas::Print>: pdf file Stack_CR3P1F_data_sigINstate+bkg.pdf has been created

FAKE RATE DENTRO IL MODULO---------->  6.02253439499 


FAKE RATE NEL MAIN--------->  data driven. Total number of irreducible background events:  6.02253441006 


######### MonteCarlo samples #########

WWZJets .......................... 0.0296599167687
ZZZJets .......................... 0.00617663877932
WWWJets .......................... 0.00148077582708
WZ .......................... 1.06280754815
TTTo2L2Nu2B .......................... 0.388186172873
TTZJets .......................... 0.165324922813
TTWJets .......................... 0.0129735312739
TTWWJets .......................... 0.00065858274408
TTGJets .......................... 0.0389565601945
DYJetsToLLTuneZ2M50 .......................... 4.42984947003
DYJetsToLLTuneZ2M10  has no enetries or is a zombie
WH126 .......................... 0.000696937035277
ZH126 .......................... 0.00368315212128
ttH126 .......................... 0.00159652806281
ZZTo2e2mu .......................... 0.589256466371
ZZTo2e2muJJ_SMHContinInterf_H125.6 .......................... 0.0140667174045
ZZTo4eJJ_SMHContinInterf_H125.6 .......................... 0.00588819542054
ZZTo4e .......................... 0.257432413788
ZZTo4mu .......................... 0.31989236832
ZZTo4muJJ_SMHContinInterf_H125.6 .......................... 0.00811144417776
ggTo2e2mu_SMHContinInterf-MCFM67_H125.6 .......................... 0.0477591079962
ggTo4e_SMHContinInterf-MCFM67_H125.6 .......................... 0.0195647976165
ggTo4mu_SMHContinInterf-MCFM67_H125.6 .......................... 0.0281646973004

######### Data #########

DoubleMu .......................... 4.57928487286
DoubleEle .......................... 3.86148874462
MuEG .......................... 0.0910865236074
digit anything you want to end the script 
Traceback (most recent call last):
  File "../python/StackPlot_func.py", line 256, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
